# logic.logline.world

./: .gitignore  Cargo.toml  GENESIS.json  README.md  logline.cicd.json
.cursor/rules/: logline.mdc
.github/: CODEOWNERS
.github/workflows/: logline.yml
crates/logline-api/: Cargo.toml
crates/logline-api/src/: lib.rs
crates/logline-auth/: Cargo.toml
crates/logline-auth/src/: cookie.rs  error.rs  jwt.rs  lib.rs  tenant.rs
crates/logline-cli/: Cargo.toml
crates/logline-cli/src/: main.rs  supabase.rs
crates/logline-cli/src/commands/: auth_session.rs  cicd.rs  db.rs  deploy.rs  dev.rs  mod.rs  secrets.rs
crates/logline-cli/src/integrations/: github.rs  mod.rs  supabase_migrate.rs  vercel.rs
crates/logline-connectors/: Cargo.toml
crates/logline-connectors/src/: lib.rs
crates/logline-core/: Cargo.toml
crates/logline-core/src/: lib.rs
crates/logline-runtime/: Cargo.toml
crates/logline-runtime/src/: lib.rs
docs/: API_CONTRACTS.md  ARCHITECTURE.md  AUDIT_REPORT_21_PHASES.md  DEPLOYMENT.md  ECOSYSTEM_PHASE0_APPROVED_V1.md  LLM_START_HERE.md  LOGLINE_ECOSYSTEM_NORMATIVE_BASE.md  OPERATIONS.md  RBAC_MODEL.md  SECURITY.md  SUPABASE_FOUNDATION.md
docs/logline-cli/: ARCHITECTURE.md
docs/logline-cli/examples/: connections.toml.example  runtime.toml.example  ui.toml.example
docs/logline-cli/rust/: traits.rs
scripts/: genesis.sh
supabase/: config.toml
supabase/migrations/: 20260227000001_base_tables.sql  20260227000002_rbac_rls.sql  20260227000003_auth_hooks.sql  20260228000004_onboarding.sql  20260228000005_cli_passkey_credentials.sql
