[package]
name = "logline-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
logline-api = { path = "../logline-api" }
logline-core = { path = "../logline-core" }
logline-connectors = { path = "../logline-connectors" }
serde_json.workspace = true
